Revert "fix(Field): input slot should align center"
This reverts commit 0f137852e059a749bbdf1d1c36577a810be08271.

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -17,7 +17,6 @@
   &__body {
     display: flex;
     align-items: center;
-    height: 100%;
   }
 
   &__control {
